Updated Spacing Issue on site

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -38,7 +38,7 @@
 			line-height: 1.5;
 			@media #{$xs} {
             	font-size: $font-size-h1-mobile;
-            	padding-top: 120px;
+            	padding-top: 1px;
         	}
 		}
 		.monitors {
